force-app/main/default/objects/bpats__ATS_Stage_Tracking__c/bpats__ATS_Stage_Tracking__c.object-meta.xml
<CustomObject>
    <label>ATS Stage Tracking</label>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>ATS Stage Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATS Stage Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>