force-app/main/default/objects/bpats__ATS_Stage_Tracking__c/fields/bpats__ATS_Stage__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATS Stage</label>
    <referenceTo>bpats__ATS_Stage__c</referenceTo>
    <relationshipLabel>ATS Stage Tracking</relationshipLabel>
    <relationshipName>ATS_Stage_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>