force-app/main/default/objects/bpats__ATS_Stage_Tracking__c/fields/bpats__ATS_Stage_Moved_To__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Stage_Moved_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATS Stage Moved To</label>
    <referenceTo>bpats__ATS_Stage__c</referenceTo>
    <relationshipLabel>ATS Stage Tracking (ATS Stage Moved To)</relationshipLabel>
    <relationshipName>ATS_Stage_Tracking1</relationshipName>
    <type>Lookup</type>
</CustomField>