force-app/main/default/objects/bpats__ATS_Stage_Tracking__c/fields/bpats__Duration__c.field-meta.xml
<CustomField>
    <fullName>bpats__Duration__c</fullName>
    <label>Duration</label>
    <length>205</length>
    <type>Text</type>
</CustomField>