force-app/main/default/objects/bpats__ATS_Stage_Tracking__c/fields/bpats__Duration_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>bpats__Duration_in_Minutes__c</fullName>
    <label>Duration in Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>