force-app/main/default/objects/bpats__ATS_Stage_Tracking__c/fields/bpats__End_Date__c.field-meta.xml
<CustomField>
    <fullName>bpats__End_Date__c</fullName>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>