force-app/main/default/objects/bpats__ATS_Stage_Tracking__c/fields/bpats__Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Log</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>